2009-07-01  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/generic.cpp (OBRingData): Fix bug in ring iterators,
	reported by Fredrik. PR#2815025.
	
	* test/iterators.cpp: Unit test for it.

2009-07-01  Noel O'Boyle  <baoilleach@gmail.com>

	* AUTHORS: Added my name

2009-06-27  Chris Morley <c.morley@gaseq.co.uk>

	* src/formats/xml/cmlformat.cpp: in reading <property> check that
	dictRef not found before reading title.
	Prevent crash if <symmetry> not read correctly.
	
	When writing <property> use dictRef rather than title if attr
	is namespaced.
	
	* src/math/vector3.cpp: sometimes needs #include <float.h>
	
2009-06-27  Chris Morley <c.morley@gaseq.co.uk>

	Make parsing of SMILES files stricter, following discussion on
	mailing list.
	* src/formats/smilesformat.cpp(Read Molecule):
	lines starting with # are ignored; lines starting with whitespace
	terminate (except with -e option); illegal chars reported;
	when using OBConversion::Convert(), the components of a SMILES reaction
	are output if it is a valid reaction with non-null reactant and product.
	
	(OBSmilesParser::SmiToMol): the string parameter is made const. This
	simplifies its use, e.g. can use substr. Similar changes would be useful
	elsewhere in OB. 
	 
	* src/formats/rsmiformat.cpp: re-written because of smilesformat changes.
	Now handles multiple reactants and products.

2009-06-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/zipstream*: Add support for tellg() / seekg(). Improves
	support for compressed mol2 files (although still bugs
	there). Positions from tellg() & seekg() mirror uncompressed data.

	* test/zipstream.cpp: New test to check if tellg/seekg support
	works.

2009-06-25  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/kekulize.cpp: Use SMARTS pattern "[aR3]" to determine if
	*any* atoms dictate a fused ring analysis. Fixes problem with
	perylene.

	* test/files/*.smi: Add perylene as a test example.
