@@ -23,6 +23,10 @@ GNU General Public License for more details.
 using namespace std;
 namespace OpenBabel
 {
+#ifdef __CYGWIN__
+  // macro to implement static OBPlugin::PluginMapType& Map()
+  PLUGIN_CPP_FILE(OBFormat)
+#endif
 
 int OBFormat::RegisterFormat(const char* ID, const char* MIME)
 {
